@@ -106,6 +106,8 @@ char *info_msg[INFO_COUNT] = {
 	"Start of vertical block marked. Move to the end of block and request actions.",
 	"Starting macro recording...",
 	"Macro recording completed.",
+	"Macro record appending started.",
+	"Macro recording cancelled.",
 	"Some documents have not been saved; are you sure?",
 	"Press a key to see ne's corresponding key code:",
 	"This document is not saved; are you sure?",
@@ -117,6 +119,7 @@ char *info_msg[INFO_COUNT] = {
 	"SELECT cursor/Enter FILTER chars/BS MODE Ins/Del REORDER F2/F3 QUIT F1/Esc-Esc/Esc",
 	"File has been modified since buffer was loaded or saved; are you sure?",
 	"A file with that name already exists; are you sure?",
+	"No such file exists; blank out current document?",
 	"HELP cursor/Enter QUIT F1/Esc-Esc/Esc",
 	"BACK Enter QUIT F1/Esc-Esc/Esc",
 	" (browse history with ^F)"
