@@ -126,6 +126,8 @@ enum info {
 	VERTICAL_BLOCK_START_MARKED,
 	STARTING_MACRO_RECORDING,
 	MACRO_RECORDING_COMPLETED,
+	MACRO_RECORD_APPENDING_STARTED,
+	MACRO_RECORDING_CANCELLED,
 	SOME_DOCUMENTS_ARE_NOT_SAVED,
 	PRESS_A_KEY,
 	THIS_DOCUMENT_NOT_SAVED,
@@ -137,6 +139,7 @@ enum info {
 	SELECT_DOC,
 	FILE_HAS_BEEN_MODIFIED,
 	FILE_ALREADY_EXISTS,
+	NO_SUCH_FILE_EXISTS,
 	HELP_KEYS,
 	HELP_COMMAND_KEYS,
 	LONG_INPUT_HELP,
